correçao em formaçao

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <strong>Nacionalidade:</strong> <em>Brasileiro</em><br>
         <strong>Cidade/Estado:</strong> <em>Goiânia(GO)</em><br>
         <strong>Estado civil:</strong> <em>Noivo</em><br>
-        <strong>Identificação:</strong> <em>Ele/Dele</em>
+        <strong>Identificação:</strong> <em>Ele/Dele</em><br>
         <strong>Formação:</strong> <em>Atualmente estudante Trybe</em><span>🚀</span>
     </p>
     
