--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <strong>Cidade/Estado:</strong> <em>Goiânia(GO)</em><br>
         <strong>Estado civil:</strong> <em>Noivo</em><br>
         <strong>Identificação:</strong> <em>Ele/Dele</em><br>
-        <strong>Formação:</strong> <em>Atualmente estudante Trybe</em><span>🚀</span>
+        <strong>Formação:</strong> <em>Atualmente estudante Trybe</em><span>🚀</span><strong>#VQV</strong>
     </p>
     
     <h2 id="qualidades">Esses são alguns pontos sobre mim para você me conhecer melhor:</h2>
