modificaçoes de estilo

--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
     <meta charset="UTF-8">
     <title>Portifólio Pablo S. Peixoto</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
-<body>
-    <h1 id="pablo">Prazer eu sou o Pablo Souza Peixoto</h1>
+
+<body class="gradient">
+
+    <h1 class="titles" id="pablo">Prazer eu sou o Pablo Souza Peixoto</h1>
     <img id="foto"src="./imagens/profile-image" alt="Foto do Pablo sorrindo" width="500px">
  
-    <h2 id="dados">Esses são alguns dados sobre mim:</h2>
+    <h2 class="titles" id="dados">Esses são alguns dados sobre mim:</h2>
     
-    <p>
+    <p id="paragraph">
         <strong>Idade:</strong> <em>24 anos</em><br>
         <strong>Nacionalidade:</strong> <em>Brasileiro</em><br>
         <strong>Cidade/Estado:</strong> <em>Goiânia(GO)</em><br>
         <strong>Estado civil:</strong> <em>Noivo</em><br>
         <strong>Identificação:</strong> <em>Ele/Dele</em><br>
-        <strong>Formação:</strong> <em>Atualmente estudante Trybe</em><span>🚀</span><strong>#VQV</strong>
+        <strong>Formação:</strong> <em>Atualmente estudante Trybe</em><span>🚀</span>
     </p>
     
-    <h2 id="qualidades">Esses são alguns pontos sobre mim para você me conhecer melhor:</h2>
+    <h2 class="titles" id="qualidades">Esses são alguns pontos sobre mim para você me conhecer melhor:</h2>
 
-    <ul>
+    <ul id="paragraph">
         <li>Sou esforçado;</li>
         <br>
         <li>Pego as coisas rápido;</li>
@@ -63,10 +68,10 @@
     </ul>
 <br>
 <br>
-    <h3>Você se perdeu? Vou te dar um indíce: </h3>
+    <h3 class="titles">Você se perdeu? Vou te dar um indíce: </h3>
 <br>
 <br>    
-    <ol>
+    <ol id="paragraph">
         <li><a href="#pablo">Quem sou eu?</a></li>
         <br>
         <li><a href="#dados">Meus dados</a></li>
